[package]
name = "rifven"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

edition = "2018"
license = "MIT/Apache-2.0"
description = "Venezuelan RIF implementation useful for creating and validating RIF numbers"
readme = "README.md"
repository = "https://github.com/EstebanBorai/rifven"
keywords = ["helper", "util", "rif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
